tests/short_assign_duplicate_bad.stderr
tests/short_assign_duplicate_bad.hop:3:5: error: HOP2001: duplicate definition 'x'
tests/short_assign_duplicate_bad.hop:3:2: hint: HOP2001: other declaration of 'x'
